class test done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>e-commerce product card</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+    <h1>MY E-commerce Store</h1>
     <div class =" product-card">
         <img src="mobile phone.png" alt="Product Image" class="product-image">
         <h2 class="product-title">E-COMMERCE Product</h2>
         <p class="product-description">This is a brief description of the sample product. It highlights key features and benefits.</p>
-        <div class="product-price">$60.99</div>
+        <div class="product-price">$100.99</div>
         <button class="add-to-cart-button">Add to Cart</button>
     </div>
     
